docs: first version of theory section

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ doc =
     Sphinx==3.2.1
     sphinx-copybutton==0.3.0
     sphinx-rtd-theme==0.5.0
+    sphinxcontrib-bibtex==1.0.0
 dev =
     %(doc)s
     black==20.8b1
