ci!: enforce all pre-commit checks through Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ jobs:
       python: 3.7
       script:
         - pip3 install -r requirements-dev.txt
-        - black . --check
-        - rstcheck $(find -type f -name "*.rst")
+        - pre-commit run -a
 
     - name: "Python 3.6 on Ubuntu 18.04"
       python: 3.6
