--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,21 @@
 root = true
 
 [*]
+end_of_line = lf
 indent_style = space
-charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.{py,toml}]
+indent_size = 4
+
+[*.{json,xml,yaml,yml}]
+indent_size = 2
+
+[*.{rst,inc}]
+indent_size = 2
+
+# when adding words through vscode, this is the resulting output format
+[cspell.json]
+indent_size = 4
+insert_final_newline = false
