--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,7 +1,9 @@
 version: 2
 
 sphinx:
+  builder: html
   configuration: conf.py
+  fail_on_warning: false
 
 formats:
   - htmlzip
@@ -9,4 +11,5 @@ formats:
 python:
   version: 3.7
   install:
-    - requirements: requirements.txt
+    - method: pip
+      path: .[doc]
