--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
+[build-system]
+requires = [
+    "setuptools>=30.3.0",
+    "setuptools_scm",
+    "wheel",
+]
+
+[tool.setuptools_scm]
+write_to = "version.py"
+
 [tool.black]
 line-length = 79
 target-version = [
