--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,6 +2,7 @@ version: 2
 
 sphinx:
   configuration: conf.py
+  fail_on_warning: false
 
 formats:
   - htmlzip
@@ -9,4 +10,5 @@ formats:
 python:
   version: 3.7
   install:
-    - requirements: requirements.txt
+    - method: pip
+      path: .[doc]
