docs: update references (adds Amsler)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,11 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: end-of-file-fixer
-        exclude: cspell.json
+        exclude: >
+          (?x)^(
+            cspell.json|
+            .*\.bib
+          )$
       - id: mixed-line-ending
       - id: trailing-whitespace
 
