--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,10 @@
   "githubPullRequests.telemetry.enabled": false,
   "gitlens.advanced.telemetry.enabled": false,
   "python.formatting.provider": "black",
+  "python.linting.enabled": false,
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
   "restructuredtext.builtDocumentationPath": "${workspaceFolder}/build/html",
   "restructuredtext.confPath": "${workspaceFolder}/src/conf.py",
   "rewrap.wrappingColumn": 79,
