ci: add tox job descriptions

--- a/tox.ini
+++ b/tox.ini
@@ -7,20 +7,25 @@ envlist =
     doc,
     sty,
 
-; Allows to quickly build html with `tox -e doc` from the root dir
 [testenv:doc]
+description =
+    Build documentation and API through Sphinx
 whitelist_externals =
     make
 commands =
     make html
 
 [testenv:linkcheck]
+description =
+    Check external links in the documentation (requires internet connection)
 whitelist_externals =
     make
 commands =
     make linkcheck
 
 [testenv:sty]
+description =
+    Perform all linting, formatting, and spelling checks
 whitelist_externals =
     pre-commit
 commands =
