ci: run cspell and markdownlint in tox sty

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,9 @@ commands =
 description =
     Perform all linting, formatting, and spelling checks
 whitelist_externals =
+    bash
     pre-commit
 commands =
     pre-commit run {posargs} -a
+    - bash -ec "cspell $(git ls-files)"
+    - bash -ec "markdownlint ."
