--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,9 @@ doc =
     myst-parser==0.12.8
     nbsphinx==0.7.1
     Sphinx==3.2.1
+    sphinx-book-theme==0.0.36
     sphinx-copybutton==0.3.0
-    sphinx-rtd-theme==0.5.0
+    sphinx-togglebutton==0.2.2
     sphinxcontrib-bibtex==1.0.0
 dev =
     %(doc)s
