--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ doc =
     doc8==0.8.1
     myst-parser==0.12.8
     nbsphinx==0.7.1
+    pybtex==0.22.2
     Sphinx==3.2.1
     sphinx-book-theme==0.0.36
     sphinx-copybutton==0.3.0
@@ -49,6 +50,7 @@ dev =
 [rstcheck]
 ignore_directives =
     bibliography,
+    toggle,
 ignore_roles =
     cite,
 report=warning
