--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,13 @@ dev =
     rstcheck==3.3.1
     tox==3.20.0
 
+[doc8]
+extension=.inc
+file-encoding=UTF-8
+ignore-path=*build
+max-line-length=79
+quiet=1
+
 [rstcheck]
 ignore_directives =
     bibliography,
