ci: support latex math mode ($)

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ doc =
     Sphinx==3.2.1
     sphinx-book-theme==0.0.36
     sphinx-copybutton==0.3.0
+    sphinx-math-dollar==1.2
     sphinx-togglebutton==0.2.2
     sphinxcontrib-bibtex==1.0.0
 dev =
