docs!: allow to write docs in notebook
Adds a plot of a non-relativistic Breit-Wigner as example

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,12 @@ repos:
       - id: doc8
         args: ["-q"]
 
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.3.8
+    hooks:
+      - id: nbstripout
+        files: ".ipynb"
+
   - repo: https://github.com/prettier/prettier
     rev: 2.1.2
     hooks:
