--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ setup_requires =
 
 [options.extras_require]
 doc =
+    jupyter==1.0.0
+    matplotlib==3.3.2
     myst-parser==0.12.10
     nbsphinx==0.8.0
     pybtex==0.23.0
@@ -43,6 +45,8 @@ dev =
     %(doc)s
     black==20.8b1
     doc8==0.8.1
+    jupyterlab==2.2.8
+    jupyterlab-code-formatter==1.3.6
     labels==20.1.0
     pre-commit==2.7.1
     rstcheck==3.3.1
