--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ dev =
     %(doc)s
     black==20.8b1
     doc8==0.8.1
+    isort==5.6.4
     jupyterlab==2.2.8
     jupyterlab-code-formatter==1.3.6
     labels==20.1.0
