--- a/tox.ini
+++ b/tox.ini
@@ -26,10 +26,56 @@ commands =
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
+setenv =
+    SKIP = mypy
 whitelist_externals =
     bash
+    mypy
     pre-commit
 commands =
+    mypy .  # run separately because of potential caching problems
     pre-commit run {posargs} -a
     - bash -ec "cspell $(git ls-files)"
     - bash -ec "markdownlint ."
+
+[flake8]
+application-import-names = pwa_pages
+filename =
+    ./src/*.py
+exclude =
+    __pycache__
+    src/conf.py
+ignore = # more info: https://www.flake8rules.com/
+    B305 # progress.Bar.next()
+    E203 # https://github.com/psf/black#slices
+    E231 # allowed by black
+    E501 # https://github.com/psf/black#line-length
+    RST201 # block quote ends without a blank line (black formatting)
+    RST301 # unexpected indentation (related to google style docstring)
+    W503 # https://github.com/psf/black#line-breaks--binary-operators
+rst-roles =
+    attr,
+    class,
+    doc,
+    file,
+    func,
+    meth,
+    mod,
+    ref,
+rst-directives =
+    deprecated,
+    envvar,
+    exception,
+    seealso,
+
+[pydocstyle]
+convention=google
+add_ignore =
+    D101, # class docstring
+    D102, # method docstring
+    D103, # function docstring
+    D105, # magic method docstring
+    D107, # init docstring
+    D203, # conflicts with D211
+    D213, # multi-line docstring should start at the second line
+    D407, # missing dashed underline after section
