--- a/setup.cfg
+++ b/setup.cfg
@@ -23,15 +23,31 @@ classifiers =
     Programming Language :: Python
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Physics
+    Typing :: Typed
 
 [options]
+python_requires = >=3.6
 setup_requires =
     setuptools_scm
+install_requires =
+    matplotlib==3.3.2
+    numpy==1.19.2
+packages = find:
+package_dir =
+    =src
+
+[options.packages.find]
+where = src
+include =
+    pwa_pages
+
+[options.package_data]
+pwa_pages =
+    py.typed
 
 [options.extras_require]
 doc =
     jupyter==1.0.0
-    matplotlib==3.3.2
     myst-parser==0.12.10
     nbsphinx==0.8.0
     pybtex==0.23.0
@@ -44,11 +60,17 @@ doc =
 dev =
     %(doc)s
     black==20.8b1
+    data-science-types==0.2.19
     doc8==0.8.1
+    flake8==3.8.4
+    isort==5.6.4
     jupyterlab==2.2.8
     jupyterlab-code-formatter==1.3.6
     labels==20.1.0
+    mypy==0.790
     pre-commit==2.7.1
+    pydocstyle==5.1.1
+    pylint==2.6.0
     rstcheck==3.3.1
     tox==3.20.1
 
@@ -58,6 +80,21 @@ file-encoding=UTF-8
 ignore-path=*build
 max-line-length=79
 quiet=1
+
+[mypy]
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+warn_unused_configs = True
+files =
+    **/*.py,
+    **/*.pyi,
+
+[mypy-conf.*]
+ignore = True
+
+; External packages that miss stubs or type hints
+[mypy-setuptools.*]
+ignore_missing_imports = True
 
 [rstcheck]
 ignore_directives =
