--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,6 +50,41 @@ repos:
 
   - repo: local
     hooks:
+      - id: flake8
+        name: flake8
+        entry: flake8
+        language: system
+        types:
+          - python
+
+      - id: isort
+        name: isort
+        entry: isort
+        language: system
+        types:
+          - python
+
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        types:
+          - python
+
+      - id: pydocstyle
+        name: pydocstyle
+        entry: pydocstyle
+        language: system
+        types:
+          - python
+
+      - id: pylint
+        name: pylint
+        entry: pylint --rcfile=.pylintrc --score=no
+        language: system
+        types:
+          - python
+
       - id: rstcheck
         name: rstcheck
         entry: rstcheck
