chore: rename source folder to doc
This is to mimic the folder structure of related packages

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": [".git", ".tox"],
-  "include": ["setup.py", "src"],
+  "include": ["setup.py", "doc"],
   "reportGeneralTypeIssues": false,
   "reportUnboundVariable": false,
   "reportUnusedClass": true,
