--- a/setup.cfg
+++ b/setup.cfg
@@ -34,10 +34,10 @@ install_requires =
     numpy==1.19.2
 packages = find:
 package_dir =
-    =src
+    =doc
 
 [options.packages.find]
-where = src
+where = doc
 include =
     pwa_pages
 
