--- a/tox.ini
+++ b/tox.ini
@@ -41,10 +41,10 @@ commands =
 [flake8]
 application-import-names = pwa_pages
 filename =
-    ./src/*.py
+    ./doc/*.py
 exclude =
     __pycache__
-    src/conf.py
+    doc/conf.py
 ignore = # more info: https://www.flake8rules.com/
     B305 # progress.Bar.next()
     E203 # https://github.com/psf/black#slices
