--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,7 @@
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": false,
   "restructuredtext.builtDocumentationPath": "${workspaceFolder}/build/html",
-  "restructuredtext.confPath": "${workspaceFolder}/src/conf.py",
+  "restructuredtext.confPath": "${workspaceFolder}/doc/conf.py",
   "rewrap.wrappingColumn": 79,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false
