--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
 [testenv:doc]
 description =
     Build documentation and API through Sphinx
+changedir = docs
 whitelist_externals =
     make
 commands =
@@ -18,10 +19,11 @@ commands =
 [testenv:linkcheck]
 description =
     Check external links in the documentation (requires internet connection)
+changedir = docs
 whitelist_externals =
     make
 commands =
-    make linkcheck
+    make ignore-warnings=1 linkcheck  # for margin directive
 
 [testenv:sty]
 description =
@@ -41,12 +43,11 @@ commands =
 [flake8]
 application-import-names = pwa_pages
 filename =
-    ./doc/*.py
+    ./src/*.py
 exclude =
     __pycache__
-    doc/conf.py
+    docs/conf.py
 ignore = # more info: https://www.flake8rules.com/
-    B305 # progress.Bar.next()
     E203 # https://github.com/psf/black#slices
     E231 # allowed by black
     E501 # https://github.com/psf/black#line-length
@@ -57,6 +58,7 @@ rst-roles =
     attr,
     class,
     doc,
+    download,
     file,
     func,
     meth,
