--- a/.editorconfig
+++ b/.editorconfig
@@ -3,8 +3,11 @@ root = true
 [*]
 end_of_line = lf
 indent_style = space
-insert_final_newline = true
 trim_trailing_whitespace = true
+insert_final_newline = true
+
+[Makefile]
+indent_style = tab
 
 [Makefile]
 indent_style = tab
