--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# cspell:ignore markdownlint
+# cspell:ignore
 
 name: CI
 
@@ -7,10 +7,16 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 jobs:
   documentation:
-    name: Build and check documentation
+    name: Build documentation and run notebooks
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -22,12 +28,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[doc]
-          sudo apt-get -y install pandoc
-      - name: Build HTML-pages
+          sudo apt-get -y install pandoc graphviz
+      - name: Build documentation and run notebooks
+        working-directory: docs
         run: make html
 
   style:
     name: Style checks
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -39,10 +47,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[dev]
-          sudo npm install -g cspell markdownlint-cli
+          sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
         run: tox -e sty
       - name: Check spelling
         run: cspell $(git ls-files)
       - name: Lint Markdown files
         run: markdownlint .
+      - name: Run pyright
+        run: pyright
