--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,7 +1,8 @@
 version: 2
 
 sphinx:
-  configuration: doc/conf.py
+  builder: html
+  configuration: docs/conf.py
   fail_on_warning: false
 
 formats:
