--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,11 @@
 name = PWA-pages
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ComPWA/PWA-pages
 project_urls =
+    Tracker = https://github.com/ComPWA/PWA-pages/issues
+    Changelog = https://github.com/ComPWA/PWA-pages/releases
     Documentation = http://pwa.rtfd.io
     Source = https://github.com/ComPWA/PWA-pages
-    Tracker = https://github.com/ComPWA/PWA-pages/issues
 license = GPLv3 or later
 keywords =
     HEP
@@ -41,12 +41,10 @@ install_requires =
     numpy==1.19.2
 packages = find:
 package_dir =
-    =doc
+    =src
 
 [options.packages.find]
-where = doc
-include =
-    pwa_pages
+where = src
 
 [options.package_data]
 pwa_pages =
@@ -54,32 +52,41 @@ pwa_pages =
 
 [options.extras_require]
 doc =
+    graphviz==0.14.2
+    ipywidgets==7.5.1
     jupyter==1.0.0
-    myst-parser==0.12.10
-    nbsphinx==0.8.0
+    myst-nb==0.10.1
     pybtex==0.23.0
+    pydeps==1.9.11
     Sphinx==3.2.1
-    sphinx-book-theme==0.0.36
-    sphinx-copybutton==0.3.0
-    sphinx-math-dollar==1.2
-    sphinx-togglebutton==0.2.2
+    sphinx-book-theme==0.0.38
+    sphinx-copybutton==0.3.1
+    sphinx-panels==0.5.2
+    sphinx-thebe==0.0.8
+    sphinx-togglebutton==0.2.3
     sphinxcontrib-bibtex==1.0.0
 dev =
     %(doc)s
     black==20.8b1
     data-science-types==0.2.19
     doc8==0.8.1
-    flake8==3.8.4
-    isort==5.6.4
-    jupyterlab==2.2.8
-    jupyterlab-code-formatter==1.3.6
+    flake8==3.8.3 # >=3 for per-file-ignores
+    flake8-blind-except==0.1.1
+    flake8-bugbear==20.1.4
+    flake8-builtins==1.5.3
+    flake8-rst-docstrings==0.0.13
+    isort==5.6.1
+    jupyterlab==2.2.4
+    jupyterlab_code_formatter==1.3.6
+    jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
-    mypy==0.790
+    mypy==0.782
+    pep8-naming==0.11.1
     pre-commit==2.7.1
     pydocstyle==5.1.1
     pylint==2.6.0
     rstcheck==3.3.1
-    tox==3.20.1
+    tox==3.20.0
 
 [doc8]
 extension=.inc
@@ -107,6 +114,10 @@ ignore_missing_imports = True
 ignore_directives =
     bibliography,
     margin,
+    seealso,
+    sidebar,
+    tabbed,
+    thebe-button,
     toggle,
 ignore_roles =
     cite,
