--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,10 @@ name = PWA-pages
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/ComPWA/PWA-pages
+project_urls =
+    Documentation = http://pwa.rtfd.io
+    Source = https://github.com/ComPWA/PWA-pages
+    Tracker = https://github.com/ComPWA/PWA-pages/issues
 license = GPLv3 or later
 keywords =
     HEP
@@ -21,6 +25,9 @@ classifiers =
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Physics
     Typing :: Typed
@@ -99,6 +106,7 @@ ignore_missing_imports = True
 [rstcheck]
 ignore_directives =
     bibliography,
+    margin,
     toggle,
 ignore_roles =
     cite,
