--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[Makefile]
+indent_style = tab
+
 [*.{py,toml}]
 indent_size = 4
 
