--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,10 @@
   },
   "cSpell.customFolderDictionaries": ["cspell.json"],
   "cSpell.enabled": true,
+  "coverage-gutters.coverageFileNames": ["coverage.xml"],
+  "coverage-gutters.coverageReportFileName": "**/htmlcov/index.html",
+  "coverage-gutters.showGutterCoverage": false,
+  "coverage-gutters.showLineCoverage": true,
   "editor.formatOnSave": true,
   "editor.rulers": [80],
   "files.associations": {
@@ -43,9 +47,9 @@
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": false,
-  "restructuredtext.builtDocumentationPath": "${workspaceFolder}/build/html",
-  "restructuredtext.confPath": "${workspaceFolder}/doc/conf.py",
+  "restructuredtext.builtDocumentationPath": "${workspaceFolder}/doc/_build/html",
   "rewrap.wrappingColumn": 79,
   "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false
+  "telemetry.enableTelemetry": false,
+  "restructuredtext.confPath": "${workspaceFolder}/doc"
 }
