--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ doc =
     Sphinx==3.2.1
     sphinx-book-theme==0.0.38
     sphinx-copybutton==0.3.1
+    sphinx-math-dollar==1.2
     sphinx-panels==0.5.2
     sphinx-thebe==0.0.8
     sphinx-togglebutton==0.2.3
