--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          pip install .[ci]
           sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
         run: tox -e sty
