ci: use installed packages for pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,6 +82,7 @@ dev =
     jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
     mypy==0.782
+    nbstripout==0.3.8
     pep8-naming==0.11.1
     pre-commit==2.7.1
     pydocstyle==5.1.1
