--- a/setup.cfg
+++ b/setup.cfg
@@ -82,8 +82,9 @@ dev =
     jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
     mypy==0.782
+    nbstripout==0.3.8
     pep8-naming==0.11.1
-    pre-commit==2.7.1
+    pre-commit==2.8.2
     pydocstyle==5.1.1
     pylint==2.6.0
     rstcheck==3.3.1
