ci: ignore error message code-block

--- a/setup.cfg
+++ b/setup.cfg
@@ -130,6 +130,7 @@ ignore_directives =
     tabbed,
     thebe-button,
     toggle,
+ignore_messages = (Error in "code-block" directive:$)
 ignore_roles =
     cite,
     wiki,
