--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,36 +8,6 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
-  test:
-    name: Run pytest
-    if: startsWith(github.ref, 'refs/tags')
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os:
-          - macos-10.15
-          - ubuntu-18.04
-        python-version: [3.6, 3.7, 3.8]
-        exclude:
-          - os: macos-10.15
-            python-version: 3.6
-          - os: macos-10.15
-            python-version: 3.8
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[test]
-      - name: Test with pytest
-        env:
-          PYTEST_RUN_SLOW_TESTS: YES
-        run: pytest -n auto
-
   documentation:
     name: Build documentation and run notebooks
     if: startsWith(github.ref, 'refs/tags')
@@ -75,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          pip install .[ci]
           sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
         run: tox -e sty
@@ -93,7 +63,6 @@ jobs:
     needs:
       - documentation
       - style
-      - test
     steps:
       - uses: actions/checkout@master
       - name: Push to stable branch
