--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,7 @@ tools =
     jupyterlab_code_formatter==1.3.6
     jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
+    sphinx-autobuild==2020.9.1
 dev =
     %(ci)s
     %(doc)s
