--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -21,7 +21,7 @@ jobs:
           any_of: |
             Bug,💡 Enhancement,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
             📖 Software,📖 Theory
-          none_of: Epic,❌ Won't fix,💫 Good first issue
+          none_of: ❌ Won't fix,💫 Good first issue
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 
   check-title:
