--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,20 @@ whitelist_externals =
 commands =
     make ignore-warnings=1 linkcheck  # for margin directive
 
+[testenv:doc-live]
+description =
+    Set up a server to preview changes to the HTML pages live
+whitelist_externals =
+    sphinx-autobuild
+commands =
+    sphinx-autobuild \
+        --watch docs \
+        --watch src \
+        --re-ignore docs/api/.* \
+        --re-ignore docs/_build/.* \
+        --open-browser \
+        docs/ docs/_build/html
+
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
