--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ commands =
     mypy .  # run separately because of potential caching problems
     pre-commit run {posargs} -a
     - bash -ec "cspell $(git ls-files)"
-    - bash -ec "markdownlint ."
+    - bash -ec "markdownlint . --ignore docs/_build"
 
 [flake8]
 application-import-names = pwa_pages
