docs!: summarize all developer tools (#50)
* ci: add tox sphinx-autobuild job
* ci: ignore build folder for markdownlint
* docs: put dev install under "Local set-up"
* docs: refer to develop page on main page

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,20 @@ whitelist_externals =
 commands =
     make ignore-warnings=1 linkcheck  # for margin directive
 
+[testenv:doc-live]
+description =
+    Set up a server to preview changes to the HTML pages live
+whitelist_externals =
+    sphinx-autobuild
+commands =
+    sphinx-autobuild \
+        --watch docs \
+        --watch src \
+        --re-ignore docs/api/.* \
+        --re-ignore docs/_build/.* \
+        --open-browser \
+        docs/ docs/_build/html
+
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
@@ -38,7 +52,7 @@ commands =
     mypy .  # run separately because of potential caching problems
     pre-commit run {posargs} -a
     - bash -ec "cspell $(git ls-files)"
-    - bash -ec "markdownlint ."
+    - bash -ec "markdownlint . --ignore docs/_build"
 
 [flake8]
 application-import-names = pwa_pages
