--- a/.github/workflows/ci-epic.yml
+++ b/.github/workflows/ci-epic.yml
@@ -1,22 +1,16 @@
-# cspell:ignore
-
-name: CI
+name: CI for epics
 
 on:
   push:
-    branches: [master]
+    branches:
+      - epic/*
   pull_request:
-    branches: [master]
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - ready_for_review
+    branches:
+      - epic/*
 
 jobs:
   documentation:
     name: Build documentation and run notebooks
-    if: github.event.pull_request.draft == false
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +29,6 @@ jobs:
 
   style:
     name: Style checks
-    if: github.event.pull_request.draft == false
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -47,12 +40,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[ci]
-          sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
         run: tox -e sty
-      - name: Check spelling
-        run: cspell $(git ls-files)
-      - name: Lint Markdown files
-        run: markdownlint .
-      - name: Run pyright
-        run: pyright
