--- a/setup.cfg
+++ b/setup.cfg
@@ -59,16 +59,17 @@ doc =
     pybtex==0.23.0
     pydeps==1.9.11
     Sphinx==3.2.1
-    sphinx-book-theme==0.0.38
+    sphinx-book-theme==0.0.39
     sphinx-copybutton==0.3.1
     sphinx-math-dollar==1.2
     sphinx-panels==0.5.2
     sphinx-thebe==0.0.8
     sphinx-togglebutton==0.2.3
     sphinxcontrib-bibtex==1.0.0
-dev =
-    %(doc)s
+format =
     black==20.8b1
+    isort==5.6.1
+lint =
     data-science-types==0.2.19
     doc8==0.8.1
     flake8==3.8.3 # >=3 for per-file-ignores
@@ -76,18 +77,27 @@ dev =
     flake8-bugbear==20.1.4
     flake8-builtins==1.5.3
     flake8-rst-docstrings==0.0.13
-    isort==5.6.1
+    mypy==0.782
+    nbstripout==0.3.8
+    pep8-naming==0.11.1
+    pydocstyle==5.1.1
+    pylint==2.6.0
+    rstcheck==3.3.1
+ci =
+    %(format)s
+    %(lint)s
+    pre-commit==2.8.2
+    tox==3.20.0
+tools =
     jupyterlab==2.2.4
     jupyterlab_code_formatter==1.3.6
     jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
-    mypy==0.782
-    pep8-naming==0.11.1
-    pre-commit==2.7.1
-    pydocstyle==5.1.1
-    pylint==2.6.0
-    rstcheck==3.3.1
-    tox==3.20.0
+    sphinx-autobuild==2020.9.1
+dev =
+    %(ci)s
+    %(doc)s
+    %(tools)s
 
 [doc8]
 extension=.inc
@@ -120,6 +130,7 @@ ignore_directives =
     tabbed,
     thebe-button,
     toggle,
+ignore_messages = (Error in "code-block" directive:$)
 ignore_roles =
     cite,
     wiki,
