build: set Development Status to Pre-Alpha

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ keywords =
     particles
     physics
 classifiers =
-    Development Status :: 1 - Planning
+    Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
