--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Output files
+*.json
+*.npy
+*.pdf
+*.png
+*.svg
+*.xml
+*.yaml
+*.yml
+
 # Build files
 *.egg-info/
 *build/
@@ -26,3 +36,16 @@ pyvenv*/
 # Settings
 .idea/
 **.code-workspace
+
+# Exceptions
+!.github/*.yml
+!.github/*/*.yml
+!.gitpod.yml
+!.markdownlint.json
+!.pre-commit-config.yaml
+!.readthedocs.yml
+!.vscode/*.json
+!codecov.yml
+!cspell.json
+!environment.yml
+!pyrightconfig.json
