chore: put application imports on separate line

--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,8 @@ commands =
     - bash -ec "markdownlint . --ignore docs/_build"
 
 [flake8]
-application-import-names = pwa_pages
+application-import-names =
+    pwa_pages
 filename =
     ./src/*.py
 exclude =
