--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = PWA-pages
 long_description = file: README.md
 long_description_content_type = text/markdown
+# URLS are shown in reverse order on PyPI
 project_urls =
     Tracker = https://github.com/ComPWA/PWA-pages/issues
     Changelog = https://github.com/ComPWA/PWA-pages/releases
@@ -52,13 +53,13 @@ pwa_pages =
 
 [options.extras_require]
 doc =
-    graphviz==0.14.2
+    graphviz==0.15
     ipywidgets==7.5.1
     jupyter==1.0.0
     myst-nb==0.10.1
     pybtex==0.23.0
     pydeps==1.9.11
-    Sphinx==3.2.1
+    Sphinx==3.3.1
     sphinx-book-theme==0.0.39
     sphinx-copybutton==0.3.1
     sphinx-math-dollar==1.2
@@ -68,36 +69,40 @@ doc =
     sphinxcontrib-bibtex==1.0.0
 format =
     black==20.8b1
-    isort==5.6.1
-    nbstripout==0.3.8
-lint =
-    data-science-types==0.2.19
+    isort==5.6.4
+    nbstripout==0.3.9
+lint-doc =
     doc8==0.8.1
-    flake8==3.8.3 # >=3 for per-file-ignores
+    rstcheck==3.3.1
+lint-py =
+    flake8==3.8.4
     flake8-blind-except==0.1.1
     flake8-bugbear==20.1.4
     flake8-builtins==1.5.3
-    flake8-rst-docstrings==0.0.13
-    mypy==0.782
+    flake8-rst-docstrings==0.0.14
+    mypy==0.790
     pep8-naming==0.11.1
     pydocstyle==5.1.1
     pylint==2.6.0
-    rstcheck==3.3.1
-ci =
+lint =
+    %(lint-doc)s
+    %(lint-py)s
+pre-commit =
     %(format)s
     %(lint)s
     pre-commit==2.8.2
+tox =
+    %(pre-commit)s
+    sphinx-autobuild==2020.9.1
     tox==3.20.1
 tools =
-    jupyterlab==2.2.4
+    jupyterlab==2.2.9
     jupyterlab_code_formatter==1.3.6
-    jupyter_nbextensions_configurator==0.4.1
     labels==20.1.0
-    sphinx-autobuild==2020.9.1
 dev =
-    %(ci)s
     %(doc)s
     %(tools)s
+    %(tox)s
 
 [doc8]
 extension=.inc
@@ -113,9 +118,6 @@ warn_unused_configs = True
 files =
     **/*.py,
     **/*.pyi,
-
-[mypy-conf.*]
-ignore = True
 
 ; External packages that miss stubs or type hints
 [mypy-setuptools.*]
