--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,8 @@
 [metadata]
 name = PWA-pages
+author = Common Partial Wave Analysis
+author_email = compwa-admin@ep1.rub.de
+maintainer_email = compwa-admin@ep1.rub.de
 long_description = file: README.md
 long_description_content_type = text/markdown
 # URLS are shown in reverse order on PyPI
