build: rename precommit extras section

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,12 +90,12 @@ lint-py =
 lint =
     %(lint-doc)s
     %(lint-py)s
-pre-commit =
+precommit =
     %(format)s
     %(lint)s
     pre-commit==2.8.2
 tox =
-    %(pre-commit)s
+    %(precommit)s
     sphinx-autobuild==2020.9.1
     tox==3.20.1
 tools =
