--- a/setup.cfg
+++ b/setup.cfg
@@ -123,6 +123,10 @@ files =
     **/*.pyi,
 
 ; External packages that miss stubs or type hints
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+[mypy-numpy.*]
+ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
 
