build!: upgrade and reorganize dependencies (#51)
* build: set Development Status to Pre-Alpha
* chore: put application imports on separate line
* chore: reorganize .gitignores
* ci: add doc-live tox job
* ci: ignore _build in pyright
* docs: add General Index and Search
* docs: add Table of Contents header
* docs: add favicon
* docs: add link to contribute page
* docs: add maintainer email
* docs: generalize conf.py through package name
* docs: remove API page layer
* docs: use repo_name in conf.py
* fix: cspell errors prereleased
* fix: deactivate pytest color for VSCode
* fix: ignore numpy and matplotlib types
* fix: install version.py under correct path
* fix: only extract doc version if available

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,6 @@ repos:
     hooks:
       - id: check-ast
       - id: check-case-conflict
-      - id: check-docstring-first
       - id: check-json
       - id: check-merge-conflict
       - id: check-toml
@@ -25,8 +24,8 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
-  - repo: https://github.com/prettier/prettier
-    rev: 2.1.2
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.2.0
     hooks:
       - id: prettier
         language_version: 12.18.2 # prettier does not specify node correctly
