--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,12 @@
-# cspell:ignore noreply pypa sdist
+# cspell:ignore noreply prereleased pypa
 
 name: CD
 
 on:
-  create:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
+  release:
+    types:
+      - prereleased
+      - released
 
 jobs:
   documentation:
@@ -45,10 +46,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[ci]
+          pip install .[precommit]
           sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
-        run: tox -e sty
+        run: pre-commit run -a
       - name: Check spelling
         run: cspell $(git ls-files)
       - name: Lint Markdown files
