--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[ci]
+          pip install .[precommit]
           sudo npm install -g cspell markdownlint-cli pyright
       - name: Perform style checks
-        run: tox -e sty
+        run: pre-commit run -a
       - name: Check spelling
         run: cspell $(git ls-files)
       - name: Lint Markdown files
