--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [metadata]
 name = PWA-pages
+author = Common Partial Wave Analysis
+author_email = compwa-admin@ep1.rub.de
+maintainer_email = compwa-admin@ep1.rub.de
 long_description = file: README.md
 long_description_content_type = text/markdown
+# URLS are shown in reverse order on PyPI
 project_urls =
     Tracker = https://github.com/ComPWA/PWA-pages/issues
     Changelog = https://github.com/ComPWA/PWA-pages/releases
@@ -17,7 +21,7 @@ keywords =
     particles
     physics
 classifiers =
-    Development Status :: 1 - Planning
+    Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
@@ -52,13 +56,13 @@ pwa_pages =
 
 [options.extras_require]
 doc =
-    graphviz==0.14.2
+    graphviz==0.15
     ipywidgets==7.5.1
     jupyter==1.0.0
     myst-nb==0.10.1
     pybtex==0.23.0
     pydeps==1.9.11
-    Sphinx==3.2.1
+    Sphinx==3.3.1
     sphinx-book-theme==0.0.39
     sphinx-copybutton==0.3.1
     sphinx-math-dollar==1.2
@@ -68,36 +72,40 @@ doc =
     sphinxcontrib-bibtex==1.0.0
 format =
     black==20.8b1
-    isort==5.6.1
-lint =
-    data-science-types==0.2.19
+    isort==5.6.4
+    nbstripout==0.3.9
+lint-doc =
     doc8==0.8.1
-    flake8==3.8.3 # >=3 for per-file-ignores
+    rstcheck==3.3.1
+lint-py =
+    flake8==3.8.4
     flake8-blind-except==0.1.1
     flake8-bugbear==20.1.4
     flake8-builtins==1.5.3
-    flake8-rst-docstrings==0.0.13
-    mypy==0.782
-    nbstripout==0.3.8
+    flake8-rst-docstrings==0.0.14
+    mypy==0.790
     pep8-naming==0.11.1
     pydocstyle==5.1.1
     pylint==2.6.0
-    rstcheck==3.3.1
-ci =
+lint =
+    %(lint-doc)s
+    %(lint-py)s
+precommit =
     %(format)s
     %(lint)s
     pre-commit==2.8.2
-    tox==3.20.0
-tools =
-    jupyterlab==2.2.4
-    jupyterlab_code_formatter==1.3.6
-    jupyter_nbextensions_configurator==0.4.1
-    labels==20.1.0
+tox =
+    %(precommit)s
     sphinx-autobuild==2020.9.1
+    tox==3.20.1
+tools =
+    jupyterlab==2.2.9
+    jupyterlab_code_formatter==1.3.6
+    labels==20.1.0
 dev =
-    %(ci)s
     %(doc)s
     %(tools)s
+    %(tox)s
 
 [doc8]
 extension=.inc
@@ -114,10 +122,11 @@ files =
     **/*.py,
     **/*.pyi,
 
-[mypy-conf.*]
-ignore = True
-
 ; External packages that miss stubs or type hints
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+[mypy-numpy.*]
+ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
 
