--- a/tox.ini
+++ b/tox.ini
@@ -16,15 +16,6 @@ whitelist_externals =
 commands =
     make html
 
-[testenv:linkcheck]
-description =
-    Check external links in the documentation (requires internet connection)
-changedir = docs
-whitelist_externals =
-    make
-commands =
-    make ignore-warnings=1 linkcheck  # for margin directive
-
 [testenv:doc-live]
 description =
     Set up a server to preview changes to the HTML pages live
@@ -34,10 +25,21 @@ commands =
     sphinx-autobuild \
         --watch docs \
         --watch src \
-        --re-ignore docs/api/.* \
+        --re-ignore docs/.*\.inv \
         --re-ignore docs/_build/.* \
+        --re-ignore docs/api/.* \
         --open-browser \
         docs/ docs/_build/html
+
+
+[testenv:linkcheck]
+description =
+    Check external links in the documentation (requires internet connection)
+changedir = docs
+whitelist_externals =
+    make
+commands =
+    make ignore-warnings=1 linkcheck  # for margin directive
 
 [testenv:sty]
 description =
@@ -55,7 +57,8 @@ commands =
     - bash -ec "markdownlint . --ignore docs/_build"
 
 [flake8]
-application-import-names = pwa_pages
+application-import-names =
+    pwa_pages
 filename =
     ./src/*.py
 exclude =
