--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,8 @@ repos:
         exclude: >
           (?x)^(
             cspell.json|
-            .*\.bib
+            .*\.bib|
+            .*\.svg
           )$
       - id: mixed-line-ending
       - id: trailing-whitespace
