--- a/setup.cfg
+++ b/setup.cfg
@@ -41,8 +41,8 @@ python_requires = >=3.6
 setup_requires =
     setuptools_scm
 install_requires =
-    matplotlib==3.3.2
-    numpy==1.19.2
+    matplotlib
+    numpy
 packages = find:
 package_dir =
     =src
@@ -53,59 +53,6 @@ where = src
 [options.package_data]
 pwa_pages =
     py.typed
-
-[options.extras_require]
-doc =
-    graphviz==0.15
-    ipywidgets==7.5.1
-    jupyter==1.0.0
-    myst-nb==0.10.1
-    pybtex==0.23.0
-    pydeps==1.9.11
-    Sphinx==3.3.1
-    sphinx-book-theme==0.0.39
-    sphinx-copybutton==0.3.1
-    sphinx-math-dollar==1.2
-    sphinx-panels==0.5.2
-    sphinx-thebe==0.0.8
-    sphinx-togglebutton==0.2.3
-    sphinxcontrib-bibtex==1.0.0
-format =
-    black==20.8b1
-    isort==5.6.4
-    nbstripout==0.3.9
-lint-doc =
-    doc8==0.8.1
-    rstcheck==3.3.1
-lint-py =
-    flake8==3.8.4
-    flake8-blind-except==0.1.1
-    flake8-bugbear==20.1.4
-    flake8-builtins==1.5.3
-    flake8-rst-docstrings==0.0.14
-    mypy==0.790
-    pep8-naming==0.11.1
-    pydocstyle==5.1.1
-    pylint==2.6.0
-lint =
-    %(lint-doc)s
-    %(lint-py)s
-precommit =
-    %(format)s
-    %(lint)s
-    pre-commit==2.9.0
-tox =
-    %(precommit)s
-    sphinx-autobuild==2020.9.1
-    tox==3.20.1
-tools =
-    jupyterlab==2.2.9
-    jupyterlab_code_formatter==1.3.6
-    labels==20.1.0
-dev =
-    %(doc)s
-    %(tools)s
-    %(tox)s
 
 [doc8]
 extension=.inc
