--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,31 @@
 [tox]
 passenv = PYTHONPATH
 skip_install = True
-skip_missing_interpreters=true
 skipsdist = True
 envlist =
     doc,
     sty,
+skip_missing_interpreters = True
 
 [testenv:doc]
 description =
     Build documentation and API through Sphinx
+deps =
+    -r .reqs/doc.txt
+usedevelop = true
 changedir = docs
 whitelist_externals =
     make
 commands =
     make html
 
-[testenv:doc-live]
+[testenv:doclive]
 description =
-    Set up a server to preview changes to the HTML pages live
-whitelist_externals =
+    Set up a server to directly preview changes to the HTML pages
+deps =
+    -r .reqs/doc.txt
     sphinx-autobuild
+usedevelop = true
 commands =
     sphinx-autobuild \
         --watch docs \
@@ -34,6 +39,9 @@ commands =
 [testenv:linkcheck]
 description =
     Check external links in the documentation (requires internet connection)
+deps =
+    -r .reqs/doc.txt
+usedevelop = true
 changedir = docs
 whitelist_externals =
     make
@@ -43,16 +51,29 @@ commands =
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
+deps =
+    -r .reqs/sty.txt
+usedevelop = true
 setenv =
     SKIP = mypy
 whitelist_externals =
     bash
-    mypy
-    pre-commit
 commands =
     mypy .  # run separately because of potential caching problems
     pre-commit run {posargs} -a
     - bash -ec "cspell $(git ls-files)"
+
+[testenv:upgrade]
+description =
+    Upgrade pinned dependencies
+deps =
+    pip-tools
+skip_install = true
+commands =
+    pip-compile --upgrade
+    pip-compile --upgrade .reqs/doc.in
+    pip-compile --upgrade .reqs/sty.in
+    pip-compile --upgrade .reqs/dev.in -o requirements-dev.txt
 
 [flake8]
 application-import-names =
