--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,17 @@
 [tox]
-passenv = PYTHONPATH
-skip_install = True
-skipsdist = True
 envlist =
     doc,
     sty,
+passenv = PYTHONPATH
+skip_install = True
 skip_missing_interpreters = True
+skipsdist = True
 
 [testenv:doc]
 description =
     Build documentation and API through Sphinx
-deps =
-    -r .reqs/doc.txt
-usedevelop = true
 changedir = docs
-whitelist_externals =
+allowlist_externals =
     make
 commands =
     make html
@@ -22,10 +19,8 @@ commands =
 [testenv:doclive]
 description =
     Set up a server to directly preview changes to the HTML pages
-deps =
-    -r .reqs/doc.txt
+allowlist_externals =
     sphinx-autobuild
-usedevelop = true
 commands =
     sphinx-autobuild \
         --watch docs \
@@ -39,11 +34,8 @@ commands =
 [testenv:linkcheck]
 description =
     Check external links in the documentation (requires internet connection)
-deps =
-    -r .reqs/doc.txt
-usedevelop = true
 changedir = docs
-whitelist_externals =
+allowlist_externals =
     make
 commands =
     make ignore-warnings=1 linkcheck  # for margin directive
@@ -51,35 +43,33 @@ commands =
 [testenv:sty]
 description =
     Perform all linting, formatting, and spelling checks
-deps =
-    -r .reqs/sty.txt
-usedevelop = true
 setenv =
     SKIP = mypy
-whitelist_externals =
+allowlist_externals =
     bash
+    mypy
+    pre-commit
 commands =
-    mypy .  # run separately because of potential caching problems
+    mypy src .  # run separately because of potential caching problems
     pre-commit run {posargs} -a
-    - bash -ec "cspell $(git ls-files)"
+    - bash -ec "cspell --no-progress $(git ls-files)"
 
 [testenv:upgrade]
 description =
-    Upgrade pinned dependencies
+    Upgrade pinned dependencies for native Python version
+allowlist_externals =
+    bash
 deps =
     pip-tools
-skip_install = true
 commands =
-    pip-compile --upgrade
-    pip-compile --upgrade .reqs/doc.in
-    pip-compile --upgrade .reqs/sty.in
-    pip-compile --upgrade .reqs/dev.in -o requirements-dev.txt
+    bash reqs/upgrade.sh
 
 [flake8]
 application-import-names =
     pwa_pages
 filename =
     ./src/*.py
+    ./tests/*.py
 exclude =
     __pycache__
     docs/conf.py
