--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -11,7 +11,8 @@ categories:
   - title: 🔨 Internals
     labels:
       - 🖱️ DX
-      - 💡 Enhancement
+      - 💡 Feature
+      - ⚠️ Interface
       - 🔨 Maintenance
 
 change-template: "- $TITLE (#$NUMBER)"
