--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
   documentation:
     name: Build documentation and run notebooks
     if: github.event.pull_request.draft == false
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.7
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r .reqs/doc.txt
+          pip install -r reqs/3.7/requirements-doc.txt
           pip install .
           sudo apt-get -y install pandoc graphviz
       - name: Build documentation and run notebooks
@@ -37,7 +37,7 @@ jobs:
   style:
     name: Style checks
     if: github.event.pull_request.draft == false
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.7
@@ -47,12 +47,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r .reqs/sty.txt
+          pip install -r reqs/3.7/requirements-sty.txt
           pip install .
           sudo npm install -g cspell pyright
       - name: Perform style checks
         run: pre-commit run -a
       - name: Check spelling
-        run: cspell $(git ls-files)
+        run: cspell --no-progress $(git ls-files)
       - name: Run pyright
         run: pyright
