--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -14,19 +14,19 @@ on:
 jobs:
   check-labels:
     name: Check labels
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: docker://agilepathway/pull-request-label-checker:latest
         with:
           any_of: |
-            Bug,💡 Enhancement,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
+            Bug,💡 Feature,⚠️ Interface,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
             📖 Software,📖 Theory
           none_of: ❌ Won't fix,💫 Good first issue
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 
   check-title:
     name: Check title
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
       - name: Install Dependencies
