--- a/reqs/requirements-doc.in
+++ b/reqs/requirements-doc.in
@@ -1,10 +1,10 @@
--r ../requirements.txt
+-r requirements.in
 
 # Requirements to build documentation
 graphviz
 ipywidgets
 jupyter
-myst-nb
+myst-nb < 0.11  # myst_admonition_enable
 pydeps
 Sphinx >= 3
 sphinx-book-theme
