ci!: update requirements through GitHub Actions (#56)
* build: limit to sphinxcontrib-bibtex < 2
* ci: import dev dependency upgrader
  https://github.com/ComPWA/expertsystem/pull/412
* ci: upgrade developer dependencies (automatic)
* fix: cross-references in develop page

--- a/reqs/requirements-doc.in
+++ b/reqs/requirements-doc.in
@@ -1,10 +1,10 @@
--r ../requirements.txt
+-r requirements.in
 
 # Requirements to build documentation
 graphviz
 ipywidgets
 jupyter
-myst-nb
+myst-nb < 0.11  # myst_admonition_enable
 pydeps
 Sphinx >= 3
 sphinx-book-theme
@@ -13,4 +13,4 @@ sphinx-math-dollar
 sphinx-panels
 sphinx-thebe
 sphinx-togglebutton
-sphinxcontrib-bibtex
+sphinxcontrib-bibtex < 2
