build: avoid myst-parser v0.13.1

--- a/reqs/requirements-doc.in
+++ b/reqs/requirements-doc.in
@@ -5,6 +5,7 @@ graphviz
 ipywidgets
 jupyter
 myst-nb >= 0.11  # myst_admonition_enable
+myst-parser != 0.13.2 # https://github.com/executablebooks/MyST-Parser/issues/299
 Sphinx >= 3
 sphinx-book-theme
 sphinx-copybutton
