--- a/tox.ini
+++ b/tox.ini
@@ -66,19 +66,9 @@ allowlist_externals =
     mypy
     pre-commit
 commands =
-    mypy src .  # run separately because of potential caching problems
+    mypy src tests  # run separately because of potential caching problems
     pre-commit run {posargs} -a
     - bash -ec "cspell --no-progress $(git ls-files)"
-
-[testenv:upgrade]
-description =
-    Upgrade pinned dependencies for native Python version
-allowlist_externals =
-    bash
-deps =
-    pip-tools
-commands =
-    bash reqs/upgrade.sh
 
 [flake8]
 application-import-names =
@@ -89,6 +79,7 @@ filename =
 exclude =
     __pycache__
     docs/conf.py
+    typings/**
 ignore = # more info: https://www.flake8rules.com/
     E203 # https://github.com/psf/black#slices
     E231 # allowed by black
