--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-# cspell:ignore noreply prereleased pypa reqs
+# cspell:ignore noreply prereleased
 
 name: CD
 
@@ -13,9 +13,6 @@ jobs:
     name: Push to stable branch
     if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-20.04
-    needs:
-      - documentation
-      - style
     steps:
       - uses: actions/checkout@master
       - name: Push to stable branch
