build: add feynman package to requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ python_requires = >=3.6, <3.10
 setup_requires =
     setuptools_scm
 install_requires =
+    feynman
     matplotlib
     numpy
 packages = find:
