--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,9 @@ files =
     **/*.py,
     **/*.pyi,
 
+[mypy-typings.*]
+ignore_errors = True
+
 ; External packages that miss stubs or type hints
 [mypy-matplotlib.*]
 ignore_missing_imports = True
