--- a/tox.ini
+++ b/tox.ini
@@ -22,16 +22,45 @@ description =
 allowlist_externals =
     sphinx-autobuild
 passenv =
+    EXECUTE_NB
     TERM
 commands =
     sphinx-autobuild \
         --watch docs \
         --watch src \
+        --re-ignore .*/.ipynb_checkpoints/.* \
+        --re-ignore .*/__pycache__/.* \
+        --re-ignore docs/.*\.csv \
+        --re-ignore docs/.*\.gv \
         --re-ignore docs/.*\.inv \
+        --re-ignore docs/.*\.json \
+        --re-ignore docs/.*\.pickle \
+        --re-ignore docs/.*\.yaml \
+        --re-ignore docs/.*\.yml \
         --re-ignore docs/_build/.* \
         --re-ignore docs/api/.* \
         --open-browser \
         docs/ docs/_build/html
+
+[testenv:docnb]
+description =
+    Build documentation through Sphinx WITH output of Jupyter notebooks
+setenv =
+    EXECUTE_NB = "yes"
+changedir = docs
+allowlist_externals =
+    make
+commands =
+    make html
+
+[testenv:doctest]
+description =
+    Check the doctests in docstrings of the API
+changedir = docs
+allowlist_externals =
+    make
+commands =
+    make ignore-warnings=1 doctest  # for margin directive
 
 [testenv:linkcheck]
 description =
@@ -83,11 +112,13 @@ ignore = # more info: https://www.flake8rules.com/
     E203 # https://github.com/psf/black#slices
     E231 # allowed by black
     E501 # https://github.com/psf/black#line-length
+    RST299 # missing pygments
     RST201 # block quote ends without a blank line (black formatting)
     RST301 # unexpected indentation (related to google style docstring)
     W503 # https://github.com/psf/black#line-breaks--binary-operators
 rst-roles =
     attr,
+    cite,
     class,
     doc,
     download,
@@ -100,6 +131,8 @@ rst-directives =
     deprecated,
     envvar,
     exception,
+    glue:figure,
+    glue:math,
     seealso,
 
 [pydocstyle]
