--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,11 +1,10 @@
 {
   "exclude": [".git", ".tox", "docs/_build"],
-  "include": ["docs", "src", "tests"],
+  "include": ["docs/conf.py", "src", "tests"],
   "reportGeneralTypeIssues": false,
   "reportUnboundVariable": false,
   "reportUnusedClass": true,
   "reportUnusedFunction": true,
   "reportUnusedImport": true,
-  "reportUnusedVariable": true,
-  "stubPath": ""
+  "reportUnusedVariable": true
 }
