fix: run mypy over src only

--- a/tox.ini
+++ b/tox.ini
@@ -95,7 +95,7 @@ allowlist_externals =
     mypy
     pre-commit
 commands =
-    mypy src tests  # run separately because of potential caching problems
+    mypy src  # run separately because of potential caching problems
     pre-commit run {posargs} -a
 
 [flake8]
