docs: add links to ampform and qrules

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 project_urls =
     Tracker = https://github.com/ComPWA/PWA-pages/issues
     Changelog = https://github.com/ComPWA/PWA-pages/releases
-    Documentation = http://pwa.rtfd.io
+    Documentation = https://pwa.rtfd.io
     Source = https://github.com/ComPWA/PWA-pages
 license = GPLv3 or later
 keywords =
