fix: enforce type hints docs/conf.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,5 +72,7 @@ ignore_errors = True
 ignore_missing_imports = True
 [mypy-numpy.*]
 ignore_missing_imports = True
+[mypy-pybtex.*]
+ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
