--- a/tox.ini
+++ b/tox.ini
@@ -95,7 +95,8 @@ allowlist_externals =
     mypy
     pre-commit
 commands =
-    mypy src  # run separately because of potential caching problems
+    # run mypy separately because of potential caching problems
+    mypy docs/conf.py src
     pre-commit run {posargs} -a
 
 [flake8]
