--- a/setup.cfg
+++ b/setup.cfg
@@ -55,3 +55,61 @@ where = src
 [options.package_data]
 pwa_pages =
     py.typed
+
+[options.extras_require]
+; Developer requirements
+doc =
+    dataclasses; python_version < '3.7'
+    graphviz
+    ipywidgets
+    jupyter
+    myst-nb >= 0.11  # myst_enable_extensions
+    Sphinx >= 3
+    sphinx-book-theme
+    sphinx-copybutton
+    sphinx-math-dollar
+    sphinx-panels
+    sphinx-thebe
+    sphinx-togglebutton
+    sphinxcontrib-bibtex >= 2.2  # bibtex_reference_style
+    sphinxcontrib-hep-pdgref
+    sympy
+test =
+    pytest
+    pytest-cov
+    pytest-mock >= 3.3.0
+    pytest-profiling
+    pytest-xdist
+format =
+    black
+    isort
+    nbstripout
+lint =
+    flake8 >= 3  # for per-file-ignores
+    flake8-blind-except
+    flake8-bugbear
+    flake8-builtins
+    flake8-rst-docstrings
+    mypy >= 0.570  # attrs support
+    pep8-naming
+    pydocstyle
+    pylint
+sty =
+    %(format)s
+    %(lint)s
+    pre-commit >= 1.4.0
+dev =
+    %(doc)s
+    %(sty)s
+    jupyterlab
+    jupyterlab-code-formatter
+    pip-tools >= 6.1.0  # for extras_require
+    sphinx-autobuild
+    tox >= 1.9  # for skip_install, use_develop
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+tensorwaves =
+    py.typed
