--- a/tox.ini
+++ b/tox.ini
@@ -74,16 +74,16 @@ commands =
 [testenv:pydeps]
 description =
     Visualize module dependencies
+deps =
+    pydeps
 changedir = src
-setenv =
-    HOME = "."
-allowlist_externals = pydeps
 commands =
     pydeps pwa_pages \
         -o module_structure.svg \
         --exclude *._* \
         --max-bacon=1 \
         --noshow
+passenv = HOME
 
 [testenv:sty]
 description =
@@ -91,7 +91,6 @@ description =
 setenv =
     SKIP = mypy
 allowlist_externals =
-    bash
     mypy
     pre-commit
 commands =
