--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -1,12 +1,12 @@
-# cspell:ignore reqs
-
 name: Linkcheck
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -22,8 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r reqs/3.7/requirements-doc.txt
-          pip install .
+          pip install -c .constraints/py3.7.txt -e .[doc]
           sudo apt-get -y install pandoc
       - name: Check external links
         working-directory: docs
