--- a/.github/workflows/requirements-cron.yml
+++ b/.github/workflows/requirements-cron.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  upgrade-reqs:
+  upgrade-requirements:
     name: Upgrade requirement files
     runs-on: ubuntu-20.04
     strategy:
@@ -27,19 +27,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pip-tools!=6.0.0
-        # https://github.com/jazzband/pip-tools/pull/1353
+          pip install pip-tools
       - name: Upgrade dependencies
-        run: bash reqs/upgrade.sh
+        run: bash .constraints/upgrade.sh
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.python-version }}
-          path: reqs/${{ matrix.python-version }}
+          path: .constraints/py${{ matrix.python-version }}.txt
 
   upgrade-pre-commit:
     name: Upgrade pre-commit hooks
     needs:
-      - upgrade-reqs
+      - upgrade-requirements
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -50,7 +48,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r reqs/3.7/requirements-sty.txt
+          pre-commit
       - name: Perform style checks
         run: pre-commit autoupdate
       - uses: actions/upload-artifact@v2
@@ -69,8 +67,8 @@ jobs:
           token: ${{ secrets.PAT }}
       - uses: actions/download-artifact@v2
         with:
-          path: reqs
-      - run: mv -f reqs/pre-commit/.pre-commit-config.yaml .
+          path: .constraints
+      - run: mv -f .constraints/.pre-commit-config.yaml .
       - run: git status -s
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
